plugins {
    id 'fabric-loom' version '1.10-SNAPSHOT'
    id 'maven-publish'
}




version = project.lib_version
group = project.maven_group




repositories {
    maven {
        name = 'ParchmentMC'
        url = 'https://maven.parchmentmc.org'
    }
    mavenLocal()
}




loom {
    splitEnvironmentSourceSets()
    mods {
        "frameworklib" {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }
}




dependencies {

    // Minecraft and mappings
    minecraft "net.minecraft:minecraft:${project.minecraft_version}"
    mappings loom.layered() {
        officialMojangMappings()
        parchment("org.parchmentmc.data:parchment-1.20.2:2023.10.08@zip")
    }


    // Mod dependencies
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    modImplementation "com.snek:frameworkconfig:${project.frameworkconfig_version}"
}




processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}




tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
    it.options.encoding = "UTF-8"
}




java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}




jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName}" }
    }
}





// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            groupId = project.maven_group
            artifactId = project.archives_base_name
            version = project.lib_version

            // Publish the unmapped jars
            artifact(tasks.jar) {
                classifier = null
            }
            artifact(tasks.sourcesJar) {
                classifier = 'sources'
            }
        }
    }

    repositories {
        mavenLocal()
    }
}
